<resources>
    <string name="app_name">Computer Launcher 11</string>

    <string name="this_pc">This PC</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="properties">Properties</string>
    <string name="quick_access">Quick Access</string>
    <string name="network">Network</string>
    <string name="desktop">Desktop</string>
    <string name="download">Downloads</string>
    <string name="document">Documents</string>
    <string name="picture">Pictures</string>
    <string name="ftp">FTP</string>
    <string name="lan">LAN</string>
    <string name="video">Video</string>
    <string name="local_disk_c2">Local Disk (C:)</string>
    <string name="pin_access">Pin to Quick Access</string>
    <string name="newfolder">New folder</string>
    <string name="more">More</string>
    <string name="status_memory">%s free on %s</string>
    <string name="pinned">Pinned</string>
    <string name="all_apps">All apps</string>
    <string name="recommended">Recommended</string>
    <string name="back">Back</string>

    <string name="action_center">Action Center</string>
    <string name="clear_all">Clear All</string>
    <string name="ACTION_NOTIFICATION">ACTION_NOTIFICATION</string>
    <string name="no_new_notifications">No new notifications</string>
    <string name="airplane">Airplane</string>
    <string name="wifi">Wifi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="flash">Flash</string>
    <string name="no_sim_card">No Sim card!</string>
    <string name="describe_no_sim_card">" Insert a sim card to use mobile hotspot and other internet sharing options."</string>
    <string name="manual">Manual</string>
    <string name="data">Data</string>
    <string name="describe_airplane_mode">"Turn off airplane mode to use mobile hotspot and other internet sharing options."</string>
    <string name="rotate">Rotate</string>
    <string name="hotspot">Hotspot</string>
    <string name="location">Location</string>
    <string name="setting">Setting</string>
    <string name="vibrate">Vibrate</string>
    <string name="background">Background</string>
    <string name="ok">Ok</string>
    <string name="windows_launcher">Windows Launcher</string>
    <string name="device_does_not_support_bluetooth">" Device does not support Bluetooth."</string>
    <string name="allow">Allow</string>
    <string name="DESCRIBE_ACCESS_NOTIFICATION_POLICY">"Control Center need permission to change some system settings"</string>
    <string name="DESCRIBE_REQUEST_WRITE_SETTING">Windows Launcher need permission to change some system settings</string>
    <string name="ACTION_MAMUAL">ACTION_MAMUAL</string>
    <string name="ACTION_NOTIFICATION_SERVICE">ACTION_NOTIFICATION_SERVICE</string>
    <string name="ACTION_NOTIFICATION_CLEAR_ALL">ACTION_NOTIFICATION_CLEAR_ALL</string>
    <string name="ACTION_NOTIFICATION_CLEAR_FOR_KEY">ACTION_NOTIFICATION_CLEAR_FOR_KEY</string>
    <string name="ACTION_MOBILE_DATA">ACTION_MOBILE_DATA</string>
    <string name="ACTION_ROTATE">ACTION_ROTATE</string>
    <string name="ACTION_HOTSPOT">ACTION_HOTSPOT</string>
    <string name="ACTION_LOCATION">ACTION_LOCATION</string>
    <string name="user">User</string>
    <string name="theme">Theme</string>
    <string name="sort_by">Sort By</string>
    <string name="new_folder">New Folder</string>
    <string name="create_shortcut">Create Shortcut</string>
    <string name="select_all">Select All</string>
    <string name="listview">Listview</string>
    <string name="gridview">Gridview</string>
    <string name="item_selected">%d items selected</string>
    <string name="can_paste_into_folder">Can\'t paste into this folder</string>
    <string name="an_error_has">"An error has occurred: "</string>
    <string name="conflict_found">Conflict Found</string>
    <string name="folder_already">Folder %s already exists in destination. What\'s your action?</string>
    <string name="apply_to_all">Apply to all</string>
    <string name="replace">Replace</string>
    <string name="merge">Merge</string>
    <string name="create_new">Create New</string>
    <string name="skip_duplicate">Skip Duplicate</string>
    <string name="copy_file">Copying file: %d %s</string>
    <string name="request_delete">Are you sure delete %d files?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="enter_file_name">Enter name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="mute">Mute</string>
    <string name="ring">Ring</string>
    <string name="search_hint">Type here to search</string>
    <string name="admin">Admin</string>
    <string name="cant_open_file">Can\'n open this file</string>

    <string name="violates_chroot">550 Server settings prevent leaving directory\r\n</string>
    <string name="must_config">Before SwiFTP can run, a username and password must be set up.</string>
    <string name="notif_server_starting">FTP server started</string>
    <string name="notif_title">SwiFTP is running</string>
    <string name="notif_text">SwiFTP is accepting FTP connections.</string>
    <string name="proxy_experimental">Experimental global proxy</string>
    <string name="proxy_status">Status:</string>
    <string name="proxy_transferred">Used:</string>
    <string name="proxy_url">URL:</string>
    <string name="pst_initial">none yet</string>
    <string name="pst_connecting">connecting</string>
    <string name="pst_connected">connected</string>
    <string name="pst_failed">failed</string>
    <string name="pst_unreachable">unreachable</string>
    <string name="pst_disconnected">disconnected</string>
    <string name="unknown">unknown</string>
    <string name="storage_warning">Warning: storage is not available. You may want to unmount it.</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="start_server_ftp">Start server for file sharing</string>
    <string name="start_ftp">Start FTP</string>
    <string name="ftp_detail">FTP server information</string>
    <string name="wifi_url"><![CDATA[<b>Wifi URL: </b> %s]]></string>
    <string name="user_name"><![CDATA[<b>Username: </b> %s]]></string>
    <string name="password"><![CDATA[<b>Password: </b> %s]]></string>
    <string name="network_available">Network not available</string>
    <string name="uninstall">Uninstall</string>
    <string name="un_pin">Unpin Quick Access</string>

    <string name="pin_to_windows">Pin to windows</string>
    <string name="unpin_to_windows">Unpin from windows</string>
    <string name="pined_app_limited">Pined Application Limited!!</string>
    <string name="lock_app">Lock App</string>
    <string name="unlock_app">Unlock App</string>
    <string name="enter_password">Enter password open app</string>
    <string name="incorrect_password">Incorrect password!</string>
    <string name="create_password_success">Create password successful!</string>
    <string name="unlock_app_success">Remove password successful!</string>
    <string name="password_title">Password</string>
    <string name="open">Open</string>
    <string name="remove">Remove</string>
    <string name="name">Name</string>
    <string name="item_type">Item type</string>
    <string name="date_modified">Date modified</string>
    <string name="weather">Weather</string>
    <string name="WEATHER">WEATHER</string>
    <string name="ERROR_WEATHER">" Internet or GPS not found."</string>
    <string name="frequent_apps">Frequent Apps</string>
    <string name="expand">Expand</string>
    <string name="collapse">Collapse</string>
    <string name="top_stories">Top Stories</string>
    <string name="find_location_here">Find and enable location here.</string>
    <string name="launcher_home_title">Launcher Setting</string>
    <string name="launcher_home_content">Do you want to change the default launcher?</string>

    <string name="pinned_app_success">Application pinned to Windows!</string>
    <string name="unpinned_app_success">Application unpinned from Windows!</string>
    <string name="create_shortcut_success">Application sent to Desktop!</string>
    <string name="rename_success">Application rename successful!</string>
    <string name="pin_to_taskbar">Pin to taskbar</string>
    <string name="unpin_to_taskbar">Unpin from taskbar</string>
    <string name="pinned_app_task_success">Application pinned to Taskbar!</string>
    <string name="unpinned_app_task_success">Application unpinned from Taskbar!</string>

    <string name="find_app_here">Find %s here</string>
    <string name="cant_open_fuction">Can\'t open function</string>
    <string name="apps_running">Applications running</string>
    <string name="see_more">See more…</string>
    <string name="collapse_">"Collapse ^"</string>
    <string name="gridview_size">GridView Size</string>
    <string name="portrait_screen">Portrait screen</string>
    <string name="landscape_screen">Landscape screen</string>
    <string name="default_launcher_setting">Default Launcher Settings</string>
    <string name="columns">Columns</string>
    <string name="rows">Rows</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="view">View</string>

</resources>