<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_popup_menu"
    android:orientation="vertical"
    android:padding="@dimen/_5sdp">

    <com.ezteam.windowslauncher.widget.FolderView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_computer"
        app:orientation="horizontal"
        app:textSize="@dimen/_11sdp"
        app:title="@string/select_all" />

    <com.ezteam.windowslauncher.widget.FolderView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_computer"
        app:orientation="horizontal"
        app:textSize="@dimen/_11sdp"
        app:title="@string/listview" />

    <com.ezteam.windowslauncher.widget.FolderView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_computer"
        app:orientation="horizontal"
        app:textSize="@dimen/_11sdp"
        app:title="@string/properties" />
</LinearLayout>